Renames (generalizes) react_todo_playground -> react_playground

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="alert alert-info">If you don't see a <em>glorious</em> TODO app below then something has gone wrong! <strong>Inspect that!</strong></p>
 
             <!-- This is where the magic happens! -->
-            <div id="react_todo_playground"></div>
+            <div id="react_playground"></div>
 
         </div>
     </div>
